# SDL-Image-Processor

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  debug.sh  main.c  run.sh
include/: image_loader.h  image_processor.h  ui_components.h  ui_controller.h  ui_state.h  ui_view.h  utils.h
src/: image_loader.c  image_processor.c  main.c  ui_components.c  ui_controller.c  ui_state.c  ui_view.c  utils.c
